<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/timer_time_layout"
    android:background="@android:color/transparent"
    android:gravity="center_horizontal|center_vertical"
    android:layout_centerHorizontal="true"
    android:layout_centerInParent="true"
    >

    <TextView
        android:id="@+id/txtManualDisabled"
        android:layout_width="@dimen/large_btn_width"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCheckin"
        android:layout_marginBottom="@dimen/diff_15"
        android:fontFamily="@font/open_sans"
        android:gravity="center_horizontal"
        android:text="@string/countdown_timer_disabled"
        android:textColor="@color/black"
        android:textSize="@dimen/manual_disabled_text_size"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtCheckin"
        android:layout_width="@dimen/large_btn_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtManualDisabled"
        android:layout_alignLeft="@+id/txtTimer"
        android:layout_marginBottom="@dimen/diff_15"
        android:fontFamily="@font/open_sans"
        android:text="@string/countdown_required_to_check_in"
        android:textColor="@color/textual_grey"
        android:textSize="@dimen/start_monitoring_text_size"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txtTimer"
        android:layout_width="@dimen/large_btn_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCheckin"
        android:layout_alignLeft="@+id/checkInButtonLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/start_monitoring_timer"
        android:textColor="@color/check_in_default"
        android:textSize="@dimen/count_down_text_size"
        android:visibility="visible" />
    <LinearLayout
        android:id="@+id/checkInButtonLayout"
        android:layout_width="@dimen/large_btn_width"
        android:layout_height="@dimen/btn_height_on_monitoring"
        android:layout_below="@id/txtTimer"
        android:layout_marginTop="@dimen/startup_countdown_button_margin_from_top"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btnSetTimerButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/diff_3"
            android:layout_weight="1"
            android:background="@drawable/btn_change_timer_selector"
            android:fontFamily="@font/open_sans"
            android:text="@string/change_timer"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnCheckinWithNotes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/diff_3"
            android:layout_weight="1"
            android:background="@drawable/btn_new_check_in_selector"
            android:fontFamily="@font/open_sans"
            android:text="@string/check_in"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <include
        android:id="@+id/networkOverlay"
        android:layout_width="@dimen/network_overlay_large_btn_width"
        android:layout_height="185dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        layout="@layout/large_network_error_overlay"
        android:visibility="visible" />
</RelativeLayout>